--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>首頁</title>
 </head>
 <body>
-  我是首頁
+  <a href="https://dalice157.github.io/memory-game/">記憶遊戲 for Vue</a>｜
+  <a href="https://dalice157.github.io/dailydrinks/">CRUD練習 for React</a>
 </body>
 </html>
