--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
   <title>首頁</title>
 </head>
 <body>
-  <a id="gtm-game" href="https://dalice157.github.io/memory-game/">記憶遊戲 for Vue</a>｜
-  <a id="gtm-crud" href="https://dalice157.github.io/dailydrinks/">CRUD練習 for React</a>
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TMG6JSXR"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+  <a id="gtm-game" href="https://dalice157.github.io/memory-game/">記憶遊戲 for Vue</a>｜
+  <a id="gtm-crud" href="https://dalice157.github.io/dailydrinks/">CRUD練習 for React</a>
+  <button id="gtm-button">按鈕</button>
 </body>
 </html>
