--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-YYFS5E3VFM"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -23,12 +23,12 @@
   <title>首頁</title>
 </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
+  <a id="gtm-game" href="https://dalice157.github.io/memory-game/">記憶遊戲 for Vue</a>｜
+  <a id="gtm-crud" href="https://dalice157.github.io/dailydrinks/">CRUD練習 for React</a>
+  <div><button id="gtm-button">按鈕</button></div>
+</body>
+<!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TMG6JSXR"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <a id="gtm-game" href="https://dalice157.github.io/memory-game/">記憶遊戲 for Vue</a>｜
-  <a id="gtm-crud" href="https://dalice157.github.io/dailydrinks/">CRUD練習 for React</a>
-  <button id="gtm-button">按鈕</button>
-</body>
 </html>
