--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
   <title>首頁</title>
 </head>
 <body>
+  <div style="text-align: center">
   <a id="gtm-game" href="https://dalice157.github.io/memory-game/">記憶遊戲 for Vue</a>｜
   <a id="gtm-crud" href="https://dalice157.github.io/dailydrinks/">CRUD練習 for React</a>
-  <div><button id="gtm-button">按鈕</button></div>
+  </div>
 </body>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TMG6JSXR"
